chay xong Components

--- a/.babelrc
+++ b/.babelrc
@@ -4,8 +4,7 @@
       "module-resolver",
       {
         "alias": {
-          "@": "./src",
-          "test": "./test"
+          "@": "./src"
         }
       }
     ]
