--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "thutrangha",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://xuanphao19.github.io/thutrangha/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -24,7 +25,11 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
+    "eject": "react-app-rewired eject",
+    "deploy": "gh-pages -d build"
+  },
+  "Debug Script": {
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
