--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "thutrangha",
   "version": "0.1.0",
-  "private": true,
   "homepage": "https://xuanphao19.github.io/thutrangha/",
+  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -18,6 +18,7 @@
   "devDependencies": {
     "babel-plugin-module-resolver": "^4.1.0",
     "customize-cra": "^1.0.0",
+    "gh-pages": "^4.0.0",
     "react-app-rewired": "^2.2.1",
     "sass": "^1.52.1"
   },
