--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
+  "homepage": "https://xuanphao19.github.io/thutrangha/",
   "name": "thutrangha",
   "version": "0.1.0",
-  "homepage": "https://xuanphao19.github.io/thutrangha/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -23,20 +23,15 @@
     "sass": "^1.52.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
     "deploy": "gh-pages -d build"
   },
-  "Debug Script": {
-    "predeploy": "npm run build"
-  },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
